--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ div.controls > div.selected {
 
             <h2>Actual Size Preview</h2>
             <div id="preview"></div>
-            <a href="#" id="previewLink" download="image.png">Download PNG</a>
+            <a href="#" id="pngLink" download="image.png">Download PNG</a> <a href="#" id="jsonLink" download="image.json">Download JSON</a>
             <br /><br />
 
         </div>
@@ -685,7 +685,8 @@ var canvas = {
 var preview = {
     handles: {
         container: document.getElementById('preview'),
-        link: document.getElementById('previewLink')
+        pngLink: document.getElementById('pngLink'),
+        jsonLink: document.getElementById('jsonLink')
     },
     init: function() {
         // create canvas with width and height 3x the settings
@@ -803,9 +804,17 @@ setInterval(
 
         previewCtx.putImageData(tiledImageData, 0, 0);
 
-        // update data url
+        // update PNG URL
         let url = preview.handles.canvas.toDataURL();
-        preview.handles.link.href = url;
+        preview.handles.pngLink.href = url;
+
+        // update JSON URL
+        let jsonified = localStorage.getItem('pixels');
+        let base64ified = btoa(jsonified);
+        url = 'data:application/json;base64,' + base64ified;
+        preview.handles.jsonLink.href = url;
+
+
         
     },
     1000
