--- a/index.html
+++ b/index.html
@@ -429,6 +429,14 @@ var handlers = {
             
         }
         */
+    },
+    change: {
+        loadJSON: function(e) {
+            let f = e.target.files[0];
+            f.text().then(function(t) {
+                canvas.load(t);
+            });
+        }
     }
 };
 // Attach the above handlers
@@ -617,11 +625,14 @@ var canvas = {
     },
 
     // resume
-    load: function() {
-        let c = localStorage.getItem('pixels');
+    load: function(c) {
         if (!c) {
-            return;
+            c = localStorage.getItem('pixels');
+            if (!c) {
+                return;
+            }
         }
+
         let colors = JSON.parse(c);
         this.setPixels(colors);
     },
@@ -802,14 +813,24 @@ setInterval(
         let i = 0;
         canvas.handles.container.childNodes.forEach(function(node) {
             let bg = node.style.backgroundColor;
-            // TODO: this might be flaky
-            let parts = bg.substring(4, bg.length - 1).split(', ');
+            let parts;
+            if (!bg) {
+                // use alpha here
+                console.log('no bg color');
+                parts = [255, 255, 255, 0];
+
+            } else {
+                // TODO: this might be flaky
+                parts = bg.substring(4, bg.length - 1).split(', ').map(value => parseInt(value, 10));
+                parts[3] = 255;
+            }
 
             // TODO: handle empty / transparent regions
-            tiledImageDataData[i] = parseInt(parts[0]);
-            tiledImageDataData[i + 1] = parseInt(parts[1]);
-            tiledImageDataData[i + 2] = parseInt(parts[2]);
-            tiledImageDataData[i + 3] = 255; // alpha
+            tiledImageDataData[i] = parts[0];
+            tiledImageDataData[i + 1] = parts[1];
+            tiledImageDataData[i + 2] = parts[2];
+            tiledImageDataData[i + 3] = parts[3]; // alpha
+
             i += 4;
         });
 
